<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/support"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvDeliteAbs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/item_fields"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/deliteAds"
        android:textColor="@color/Black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/item_fields"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/i_like"
        android:textColor="@color/Black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvSendEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/item_fields"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/write_us"
        android:textColor="@color/Black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/about"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvAboutApp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/item_fields"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/Black"
        android:textSize="20sp" />


</LinearLayout>