<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".AboutProgramActivity">

    <ImageView
        android:id="@+id/ivAppLabel"
        android:contentDescription="@string/app_name2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/web_hi_res_512" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/fields"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewNameApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name2"
            android:textColor="@color/Black"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:layout_gravity="top|center_horizontal"/>

        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:text="@string/version" />

        <TextView
            android:id="@+id/textViewVersionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:text="@string/version_number" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>